--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,10 +1,12 @@
 server.port=8080
-pring.datasource.url=jdbc:h2:mem:testdb
+spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
 
 #username y password de la database
-spring.datasource.username=jesus
+spring.datasource.username=sa
 spring.datasource.password=
+
+spring.jpa.show-sql = true
 
 #actualiza la base de datos y crea la entidad
 spring.jpa.hibernate.ddl-auto=update
@@ -12,3 +14,13 @@ spring.jpa.hibernate.ddl-auto=update
 #especifica el tipo de base de datos utilizada para generar el tipo apropiado de declaraciones SQL
 #SQL para la comunicacion entre jdbc y bbdd
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+
+#spring.datasource.url=jdbc:mysql://localhost/spring_db_token?serverTimezone=America/Mexico_City&useSSL=false
+#spring.datasource.username=wpbreak
+#spring.datasource.password=android13
+#spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+#spring.jpa.database-platform=org.hibernate.dialect.MySQL8Dialect
+#spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.format_sql=true
