--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=9080
-spring.datasource.url= jdbc:postgresql://localhost:5432/item
-spring.datasource.username= postgres
+spring.datasource.url= jdbc:postgresql://localhost:5432/db_dws
+spring.datasource.username= wpbreak
 spring.datasource.password= android13
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation= true
 spring.jpa.properties.hibernate.dialect= org.hibernate.dialect.PostgreSQLDialect
